# financial-volatility-performance-and-compute-benchmark

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: default.yaml
configs/research/: dataset_spy.yaml
data/cache/: yahoo_finance_spy_19990101_20251231_daily.parquet
docs/: architecture.md  audit-report.md  backlog.md  dataset.md  experiments.md  features.md  research-plan.md  roadmap.md  tenstorrent.md  thesis-mapping.md
results/: results.csv  synthetic_ohlcv.csv
results/dataset/: spy_dataset_report.md  spy_dataset_summary.csv
results/features/: correlation_matrix.csv  feature_distributions.csv  feature_missing_values.csv  feature_summary.csv
src/financial_volatility/: __init__.py  cli.py
src/financial_volatility/benchmark/: __init__.py  hardware.py  profiler.py  runner.py  tenstorrent.py  types.py  walk_forward.py
src/financial_volatility/config/: __init__.py  loader.py  schema.py  settings.py
src/financial_volatility/data/: __init__.py  cache.py  loaders.py  preparation.py  splitting.py  types.py  walk_forward.py  yahoo.py
src/financial_volatility/evaluation/: __init__.py  metrics.py  results.py
src/financial_volatility/features/: __init__.py  engineering.py  inspection.py  sequences.py
src/financial_volatility/models/: __init__.py  base.py  garch.py  linear.py  lstm.py  registry.py  transformer.py  xgboost.py
src/financial_volatility/pipelines/: __init__.py  configured.py  experiment.py
src/financial_volatility/results/: __init__.py  storage.py
src/financial_volatility/visualization/: __init__.py  plots.py  tables.py
src/volatility_benchmark/: __init__.py
src/volatility_benchmark/benchmark/: __init__.py  runner.py  splits.py  types.py
src/volatility_benchmark/config/: __init__.py  loader.py  schema.py
src/volatility_benchmark/data/: __init__.py  loaders.py  transforms.py  validation.py
src/volatility_benchmark/evaluation/: __init__.py  metrics.py  results.py
src/volatility_benchmark/metrics/: __init__.py  accuracy.py  compute.py
src/volatility_benchmark/models/: base.py
src/volatility_benchmark/models/deep_learning/: __init__.py
src/volatility_benchmark/models/machine_learning/: __init__.py
src/volatility_benchmark/models/statistical/: __init__.py
src/volatility_benchmark/results/: schema.py  writer.py
tests/: test_cli.py  test_package_import.py
tests/benchmark/: test_gpu.py  test_profiler.py  test_runner.py  test_tenstorrent.py  test_walk_forward.py
tests/config/: test_loader.py  test_settings.py
tests/data/: test_cache.py  test_loaders.py  test_research_dataset.py  test_splitting.py  test_types.py  test_walk_forward_splitter.py  test_yahoo.py
tests/evaluation/: test_metrics.py
tests/features/: test_engineering.py  test_sequences.py  test_targets.py
tests/models/: test_forecast_model.py  test_garch.py  test_linear.py  test_lstm.py  test_registry.py  test_transformer.py  test_xgboost.py
tests/pipelines/: test_configured.py  test_experiment.py
tests/results/: test_storage.py
tests/visualization/: test_plots.py  test_tables.py
