[project]
name = "financial-volatility-performance-and-compute-benchmark"
version = "0.1.0"
description = "Benchmark foundation for financial volatility forecasting experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/volatility_benchmark", "src/financial_volatility"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["volatility_benchmark"]
