[project]
name = "financial-volatility-performance-and-compute-benchmark"
version = "0.1.0"
description = "Benchmark foundation for financial volatility forecasting experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arch>=8.0.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "numpy<2.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "typer>=0.26.8",
    "xgboost>=3.2.0",
    "yfinance>=1.5.1",
]

[project.scripts]
fvbench = "financial_volatility.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/financial_volatility"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["financial_volatility"]
